--- a/public/confirm.html
+++ b/public/confirm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,14 @@
 
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="container">
-        <p class="alert_success">&#x2611; Cuenta confirmada correctamente</p>
-        <a href="http://localhost:5200/signin">Ir a Login ahora</a>
+        <p class="alert_success">&#x2611; Cuenta confirmada correctamente<br><a class="login"
+                href="http://localhost:5200/signin">Ir a Login ahora</a></p>
+
+
     </div>
 </body>
+
 </html>
