--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarme</title>
+    <title>PatronatoTelasAPI</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -13,8 +13,8 @@
 <body>
     <div class="container">
         <form id="form" class="form" autocomplete="off">
-            <p id="alert__submit-success">Registrado correctamente</p>
-            <p id="alert__submit-error">Error al registrar</p>
+            <!-- <p id="alert__submit-success">Registrado correctamente</p>
+            <p id="alert__submit-error">Error al registrar</p> -->
 
             <h2 class="form__title">Ya puede cerrar esta pagina</h2>
            
