--- a/public/confirm.html
+++ b/public/confirm.html
@@ -12,9 +12,8 @@
 
 <body>
     <div class="container">
-        <p class="alert_success">Cuenta confirmada correctamente<br>
-            <!-- <a class="login" href="https://www.patronatotelas.cl/signin">Ir a Login ahora</a> -->
-            <a class="login" href="http://localhost:5200/signin">Ir a Login ahora</a>
+        <p class="alert_success">Cuenta confirmada correctamente<br>         
+            <a class="login" href="https://www.patronatotelas.cl/signin">Ir a Login ahora</a>
         </p>
 
 
